syntax = "proto3";

package api;

option go_package = "github.com/daniilmikhaylov2005/school_project/api";

/*
  Users service
*/

service User {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}

message CreateUserRequest {
  string first_name = 1;
  string second_name = 2;
  string login = 3;
  string email = 4;
  string password = 5;
}

message CreateUserResponse {
  string login = 1;
  string password = 2;
  int64 id = 3;
}

message GetUserRequest {
  string login = 1;
}

message GetUserResponse {
  int64 id = 1;
  string first_name = 2;
  string second_name = 3;
  string login = 4;
  string email = 5;
  string password = 6;
}


